# oaktree-variance-drafts

./: .dockerignore  .gitignore  CODEOWNERS  Dockerfile  PROMPT_CONTRACT.md  README.md  SECURITY.md  gunicorn.conf.py  openai_client_helper.py  openai_file_upload.py  pyproject.toml  requirements.txt  track-b-chatgpt-variance-or-summary.yaml  two-track-upload-report-v2.yaml  two-track-upload-report-v3-fix.yaml  two-track-upload-report-v3.yaml  two-track-upload-report.yaml
.github/workflows/: boom-sla-cron.yml  ci.yml  deploy.yml  main_oaktree-variance-dev.yml
app/: api.py  config.py  gpt_client.py  main.py  pipeline.py  prompt_contract.py  schemas.py  ui.html  validators.py
app/llm/: extract_from_text.py  openai_client.py  procurement_draft.py
app/parsers/: __init__.py  procurement_pdf.py  single_file.py  single_file_intake.py
app/routers/: drafts.py
app/services/: __init__.py  csv_loader.py  doors_quotes_adapter.py  insights.py  llm.py  singlefile.py
app/static/: ceo.html  (+3 more)
scripts/: load_csv_and_post.py
tests/: conftest.py  test_analyze_single_file_no_cards.py  test_api.py  test_csv_loader.py  test_doors_quotes_adapter.py  test_drafts_from_file_multisheet.py  test_from_file_no_variance_returns_summary_and_insights.py  test_gpt_client.py  test_pdf_no_variance_returns_summary_and_insights.py  test_pipeline.py  test_procurement_pdf.py  test_single_file_llm_routing.py  test_single_generate_procurement.py  test_singlefile_doors_quotes_like.py  test_singlefile_intake_diagnostics.py  test_singlefile_pdf.py  test_upload.py
workflows/: single-file-chatgpt.yaml
(+9 files in other folders)
