[project]
name = "oaktree-variance-drafts"
version = "0.1.0"
description = "MVP service for generating variance explanation drafts"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic>=2,<3",
    "openai>=1,<2",
    "requests",
]

[project.optional-dependencies]
dev = ["pytest"]
