[project]
name = "oaktree-variance-drafts"
version = "0.1.0"
description = "MVP service for generating variance explanation drafts"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic>=2,<3",
    "openai>=1,<2",
    "pandas>=2.1.0",
    "pdfplumber==0.11.4",
    "pypdf==4.2.0",
    "python-docx>=1.1.0",
    "openpyxl>=3.1",
    "chardet==5.2.0",
    "python-multipart==0.0.9",
    "requests>=2.31",
    "numpy>=1.26.0",
    "pdfminer.six>=20231228",
    "tenacity",
]

[project.optional-dependencies]
dev = ["pytest", "ruff", "mypy"]
